--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "swap": "npx hardhat run src/swap.test.ts",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
-    "deploy": "npx hardhat run scripts/deploy.ts"
+    "deploy": "npx hardhat run scripts/deployArbitrage.ts.ts"
   },
   "keywords": [],
   "author": "",
