--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 ALCHEMY_API_KEY=""
-MNEMONIC=""
-ARBITRAGE_CONTRACT_ADDRESS=""
-PRIVATE_KEY=""
+MNEMONIC="season clay citizen print travel olive umbrella cream high wrestle cupboard trash"
+ARBITRAGE_CONTRACT_ADDRESS="0xeE9F0a940f7eD451A08527Cb828B490D115dd51E"
 PRICE_DIFFERENCE=0.50
 UNITS=0
 GAS_LIMIT=600000
