--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx hardhat run src/main.ts",
-    "swap": "npx hardhat run src/swap.test.ts",
+    "bot": "npx hardhat run --network localhost src/main.ts",
+    "swap": "npx hardhat run --network localhost src/swap.test.ts",
     "test": "npx hardhat test",
     "coverage": "npx hardhat coverage",
-    "deploy": "npx hardhat run scripts/deployArbitrage.ts.ts"
+    "deploy": "npx hardhat run --network localhost scripts/deployArbitrage.ts",
+    "node:deploy:bot": "concurrently 'npx hardhat node' 'sleep 12 && npm run deploy' 'sleep 20 && npm run start'"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "chai": "^4.3.6",
     "dotenv": "^10.0.0",
-    "hardhat": "^2.12.2"
+    "hardhat": "^2.12.2",
+    "concurrently": "^7.5.0"
   }
 }
