--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
-ALCHEMY_API_KEY=""
+# network specific node uri : `"ETH_NODE_URI_" + networkName.toUpperCase()`
+ETH_NODE_URI_MAINNET=https://eth-mainnet.alchemyapi.io/v2/<apiKey>
+# generic node uri (if no specific found) :
+ETH_NODE_URI=https://{{networkName}}.infura.io/v3/<apiKey>
+
+# network specific mnemonic : `"MNEMONIC_ " + networkName.toUpperCase()`
+MNEMONIC_MAINNET=<mnemonic for mainnet>
+# generic mnemonic (if no specific found):
 MNEMONIC="season clay citizen print travel olive umbrella cream high wrestle cupboard trash"
+
 ARBITRAGE_CONTRACT_ADDRESS="0xeE9F0a940f7eD451A08527Cb828B490D115dd51E"
+
 PRICE_DIFFERENCE=0.50
 UNITS=0
 GAS_LIMIT=600000
