--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,11 @@ MNEMONIC_MAINNET=<mnemonic for mainnet>
 # generic mnemonic (if no specific found):
 MNEMONIC="season clay citizen print travel olive umbrella cream high wrestle cupboard trash"
 
-ARBITRAGE_CONTRACT_ADDRESS="0xeE9F0a940f7eD451A08527Cb828B490D115dd51E"
+
+# arbitrage ontract address specific : `"CONTRACT_ADDRESS_ " + networkName.toUpperCase()`
+CONTRACT_ADDRESS_MAINNET=<address for mainnet>
+# arbitrage contract address (if no specific found):
+CONTRACT_ADDRESS="0xeE9F0a940f7eD451A08527Cb828B490D115dd51E"
 
 PRICE_DIFFERENCE=0.50
 UNITS=0
