--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "t": "npx hardhat run projects/triangle-arbitrage/main.ts",
     "bot": "npx hardhat run src/main.ts",
     "swap": "npx hardhat swap",
     "test": "npx hardhat test",
@@ -22,13 +23,15 @@
     "@openzeppelin/contracts": "^4.4.1",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0"
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@types/node-fetch": "^2.6.2",
     "chai": "^4.3.6",
+    "concurrently": "^7.5.0",
     "dotenv": "^10.0.0",
-    "hardhat": "^2.12.2",
-    "concurrently": "^7.5.0"
+    "hardhat": "^2.12.2"
   }
 }
