little but of improvment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,12 @@
 			"source.organizeImports": false
 		}
 	},
+	"[solidity]": {
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.organizeImports": false
+		}
+	},
 	"[typescript]": {
 		"editor.formatOnPaste": false,
 		"editor.formatOnSave": true,
